--- a/Latex/literature.bib
+++ b/Latex/literature.bib
@@ -19,6 +19,13 @@
   publisher={John Wiley \& Sons}
 }
 
+@article{pukhrem2017enhanced,
+  title={Enhanced Network Voltage Management (NVM) Techniques Under the Proliferation of Rooftop Solar PV Installation in Low Voltage Distribution Network (LVDN)},
+  author={Pukhrem, Shivananda and Basu, Malabika and Conlon, Michael and Sunderland, Keith},
+  year={2017},
+  publisher={Technological University Dublin}
+}
+
 @article{marks2021young,
   title={Young people's voices on climate anxiety, government betrayal and moral injury: A global phenomenon},
   author={Marks, Elizabeth and Hickman, Caroline and Pihkala, Panu and Clayton, Susan and Lewandowski, Eric R and Mayall, Elouise E and Wray, Britt and Mellor, Catriona and van Susteren, Lise},
@@ -135,10 +142,38 @@
 }
 
 @online{ws:dwdweatherstations,
-  author={dwd.de},
+  author={Deutscher Wetterdienst},
   title={Stationsliste der 83 Messstationen},
   url={https://www.dwd.de/DE/leistungen/klimadatendeutschland/stationsuebersicht.html#:~:text=Wetter%20und%20Klima%20%2D%20Deutscher%20Wetterdienst,83%20Messstationen%20(nach%20Stationsname%20sortiert)},  
   note={Zugegriffen am 27.06.2023},
+}
+
+@online{ws:dwdradiation,
+  author={Deutscher Wetterdienst},
+  title={Dredimensionale Ansicht der PV-Anlage 1200},
+  url={https://www.dwd.de/DE/leistungen/solarenergie/strahlungskarten_sum.html?nn=16102},  
+  note={Zugegriffen am 11.05.2023},
+}
+
+@online{ws:fraunhofer,
+  author={Fraunhofer-Gesellschaft},
+  title={Kurzfristprognose der PV-Leistung mit Wolkenkameras},
+  url={https://www.ise.fraunhofer.de/de/geschaeftsfelder/photovoltaik/photovoltaische-module-und-kraftwerke/solare-einstrahlungs-und-leistungsprognose/kurzfristprognose-der-pv-leistung-mit-wolkenkameras.html},  
+  note={Zugegriffen am 18.06.2023},
+}
+
+@online{ws:leifiphysik,
+  author={leifiphysik.de},
+  title={Energieübertragung durch Hochspannung},
+  url={https://www.leifiphysik.de/elektrizitaetslehre/induktion-und-transformator/grundwissen/energieuebertragung-durch-hochspannung},  
+  note={Zugegriffen am 07.05.2023},
+}
+
+@online{ws:bildungsserverhamburg,
+  author={bildungsserver.hamburg.de},
+  title={Wolken im Klimasystem},
+  url={https://bildungsserver.hamburg.de/wolken-im-klimasystem-60164},  
+  note={Zugegriffen am 04.04.2023},
 }
 
 @online{pic:googlemaps,
